--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link href="../Bootstrap\bootstrap-5.3.0-alpha3-dist\css\bootstrap.min.css" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link href="../style.css" rel="stylesheet">
+    <link rel="icon" type="images/x-icon" href="../img/Logo de vernada man.png"/>
     <title>Contact</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../verandaman/index2.html">HOME</a>
+                    <a class="nav-link active" aria-current="page" href="../verandaman/home.html">HOME</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../verandaman/team.html">TEAM</a> 
@@ -63,9 +64,9 @@
           <div class="col-sm-12 headerimgh" style="height: 500px;">
                 <div class="image_wrapper">
             
-                    <div class="overlay overlay_2">
+                    <div class="overlay overlay_2 max-width-20">
                       <h3>Contact</h3> 
-                      <a href="url" target="_self"><span>HOME</span></a> <a href="url" target="_self">CONTACT</a>
+                      <p><a href="../verandaman/home.html" target="_self">HOME</a>CONTACT</p>
                     </div>
                   </div>
               </div>
@@ -81,7 +82,7 @@
       <div class="row first second margincontact" style="justify-content:center"> 
         <h1>Neem contact met ons op</h1>
         <div class="underline"></div>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis esse atque et veritatis repellendus temporibus impedit molestias eos commodi perspiciatis officiis amet, quaerat quo, dolorum ipsam quod vel excepturi rerum.</p>
+        <p class="contactheaderp">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis esse atque et veritatis repellendus temporibus impedit molestias eos commodi perspiciatis officiis amet, quaerat quo, dolorum ipsam quod vel excepturi rerum.</p>
       </div>
       <div class="row row-cols-2 row-cols-xs-1 row-cols-sm-1 row-cols-md-1 row-cols-lg-2">
         <div class="col col-12 col-xs-12 col-sm-12 col-md-12">
@@ -89,7 +90,7 @@
             <h2>De Verandaman</h2>
             <div class="underline"></div>
           </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus perspiciatis nesciunt ad voluptate vero ea hic fuga, quas repudiandae nihil, illum sint quidem autem quae tempore, adipisci vel. Enim, doloremque?</p>
+            <p class="contactheaderp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus perspiciatis nesciunt ad voluptate vero ea hic fuga, quas repudiandae nihil, illum sint quidem autem quae tempore, adipisci vel. Enim, doloremque?</p>
             <div class="contacticon">                
               <h5><i class="bi bi-geo-alt-fill" style="color: var(--icon-color);"></i>Kastanjepad 12, 6604 BK Wijchen</h5> 
               <h5><i class="bi bi-telephone-fill" style="color: var(--icon-color);"></i> 06-57711630</h5>
@@ -98,7 +99,7 @@
               <h5><i class="bi bi-instagram" style="color: var(--icon-color);"></i> De Verandaman</h5>
             </div>
         </div>
-        <div class="col col-12 col-xs-12 col-sm-12 col-md-12">
+        <div class="col col-12 col-xs-12 col-sm-12 col-md-12 paddingform">
           <form>
             <div class="row mb-3">
               <input type="text" class="form-control contact " placeholder="Naam" aria-label="First name">
@@ -131,51 +132,51 @@
               <h2>Lorem ipsum<br> dolor sit amet consectetur</h2>
             <div class="underline"></div>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, blanditiis? Error architecto illo, id tenetur quo molestias beatae qui illum! Natus sint eaque enim, adipisci cum quia quaerat obcaecati repellat.</p>
+            <p class="contactheaderp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, blanditiis? Error architecto illo, id tenetur quo molestias beatae qui illum! Natus sint eaque enim, adipisci cum quia quaerat obcaecati repellat.</p>
           </div>
           <div class="col col-12 col-xs-12 col-sm-12 col-md-12 col-lg-5">
             <div class="heading-container left">
               <h2>Veel<br> gestelde vragen</h2>
             <div class="underline"></div>
             </div>
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-              <div class="accordion-item" style="background-color: #144734" >
-                <h2 class="accordion-header" >
-                  <button class="accordion-button whiteaccordion collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne"  >
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button class="accordion-button accordion-button-green" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="background-color:white" >
                     Accordion Item #1
                   </button>
                 </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionFlushExample">
+                <div id="collapseOne" class="accordion-collapse collapse show"  aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                   <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
                 </div>
               </div>
               <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button whiteaccordion collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="background-color:white">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button collapsed accordion-button-green" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="background-color:white">
                     Accordion Item #2
                   </button>
                 </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div id="collapseTwo" class="accordion-collapse collapse"  aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                   <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
                 </div>
               </div>
               <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button whiteaccordion collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="background-color:white">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed accordion-button-green" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="background-color:white">
                     Accordion Item #3
                   </button>
                 </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div id="collapseThree" class="accordion-collapse collapse"  aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                   <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
                 </div>
               </div>
               <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button whiteaccordion collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour" style="background-color:white" >
+                <h2 class="accordion-header" id="headingFour">
+                  <button class="accordion-button collapsed accordion-button-green" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour" style="background-color:white" >
                     Accordion Item #4
                   </button>
                 </h2>
-                <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                   <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
                 </div>
               </div>
@@ -183,6 +184,70 @@
           </div>
       </div>
     </div>
+
+    <div class="colorfooter">
+      <footer class="container-fluid footer">
+         <div class="row row-padding-50">
+            <div class="col-12 col-md-12 col-xl-3">
+               <img src="../img/Logo de vernada man-modified.png" alt="logo">
+               <h5>
+                  Bent u op zoek naar een maatwerk
+                  oplossing voor uw idee of project? Dan
+                  bent u bij de verandaman aan het juiste
+                  adres.
+               </h5>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 padding-top-5">
+               <h3>Diensten</h3>
+               <br>
+               <h5>TUINHUIZEN</h5>
+               <br>
+               <h5>VERANDA'S</h5>
+               <br>
+               <h5>OVERKAPPINGEN</h5>
+               <br>
+               <h5>
+               SCHUTTINGEN</h4><br>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 padding-top-5">
+               <h3>Laatste nieuws</h3>
+               <br>
+               <h5 class="footer-blog">01-juni-2022</h5>
+               <h5>
+                  //Titel blog,
+               </h5>
+               <h5>
+                  blog titel blog
+               </h5>
+               <br>
+               <h5 class="footer-blog">01-juni-2022</h5>
+               <h5>
+                  //Titel blog,
+               </h5>
+               <h5>
+                  blog titel blog
+               </h5>
+               <br>
+            </div>
+            <div class="col-12 col-md-4 col-xl-3 padding-top-5" style="margin-bottom: 5em;">
+               <h3>Contact</h3>
+               <br>
+               <div class="contacticon">                
+                <h5><i class="bi bi-geo-alt-fill" style="color: var(--icon-color);"></i>Kastanjepad 12, 6604 BK Wijchen</h5> 
+                <h5><i class="bi bi-telephone-fill" style="color: var(--icon-color);"></i> 06-57711630</h5>
+                <h5><i class="bi bi-envelope-fill" style="color: var(--icon-color);"></i> info@verandaman.com</h5>
+                <h5><i class="bi bi-facebook" style="color: var(--icon-color);"></i> De Verandaman</h5>
+                <h5><i class="bi bi-instagram" style="color: var(--icon-color);"></i> De Verandaman</h5>
+              </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-12 margin-bottom-5em">
+               <h6>© 2022 De Verandaman</h6>
+            </div>
+         </div>
+      </div>
+      </footer>
       
 </body>
 <script src="../Bootstrap\bootstrap-5.3.0-alpha3-dist\js\bootstrap.bundle.min.js"></script>
