--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <link href="../Bootstrap\bootstrap-5.3.0-alpha3-dist\css\bootstrap.min.css" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link href="../style.css" rel="stylesheet">
+    <link rel="icon" type="images/x-icon" href="../img/Logo de vernada man.png"/>
     <title>Portfolio</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../verandaman/index2.html">HOME</a>
+                    <a class="nav-link active" aria-current="page" href="../verandaman/home.html">HOME</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../verandaman/team.html">TEAM</a> 
@@ -62,9 +63,9 @@
         <div class=".container-fluid imgheader">
           <div class="col-sm-12 headerimgh" style="height: 500px;">
                 <div class="image_wrapper">
-                    <div class="overlay overlay_2">
+                    <div class="overlay overlay_2 max-width-25">
                       <h3>Portfolio</h3> 
-                      <a href="url" target="_self"><span>HOME</span></a> <a href="url" target="_self">PORTFOLIO</a>
+                      <p><a href="../verandaman/home.html" target="_self">HOME</a>PORTFOLIO</p>
                     </div>
                   </div>
               </div>
@@ -148,7 +149,7 @@
     <div class="row row-cols-1 row-cols-xs-1 row-cols-sm-1 row-cols-md-2 imgportfolio" style="justify-content: center">
       <div class="col-lg-5 col-md-12">
         <div class="col-12 imglogo portfolio">
-          <img src="../img/placeholder.png" alt="placeholder">
+          <img class="gardenhouse" src="../img/SVG/Tuinhuis.svg" alt="placeholder">
           <div class="content">
           <h2>Tuinhuizen</h2>              
            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus laudantium cupiditate dicta consequuntur reprehenderit doloremque odio. Obcaecati perspiciatis animi quibusdam, totam amet numquam ut accusantium culpa officia natus adipisci?</p>
@@ -157,7 +158,7 @@
       </div>
       <div class="col-lg-5 col-md-12">
         <div class="col-12 imglogo portfolio">
-          <img src="../img/placeholder.png" alt="placeholder">
+          <img class="gardenhouse" src="../img/SVG/Veranda.svg" alt="placeholder">
           <div class="content">
           <h2>Veranda's</h2>              
            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus laudantium cupiditate dicta consequuntur reprehenderit doloremque odio. Obcaecati perspiciatis animi quibusdam, totam amet numquam ut accusantium culpa officia natus adipisci?</p>
@@ -168,7 +169,7 @@
     <div class="row row-cols-1 row-cols-xs-1 row-cols-sm-1 row-cols-md-2" style="justify-content: center">
       <div class="col-lg-5 col-md-12">
         <div class="col-12 imglogo portfolio">
-          <img src="../img/placeholder.png" alt="placeholder">
+          <img class="gardenhouse" src="../img/SVG/Overkapping.svg" alt="placeholder">
           <div class="content">
           <h2>Overkappingen</h2>              
            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus laudantium cupiditate dicta consequuntur reprehenderit doloremque odio. Obcaecati perspiciatis animi quibusdam, totam amet numquam ut accusantium culpa officia natus adipisci?</p>
@@ -177,7 +178,7 @@
       </div>
       <div class="col-lg-5 col-md-12">
         <div class="col-12 imglogo portfolio">
-          <img src="../img/placeholder.png" alt="placeholder">
+          <img class="gardenhouse" src="../img/SVG/Schutting.svg" alt="placeholder">
           <div class="content">
           <h2>Schuttingen</h2>              
            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus laudantium cupiditate dicta consequuntur reprehenderit doloremque odio. Obcaecati perspiciatis animi quibusdam, totam amet numquam ut accusantium culpa officia natus adipisci?</p>
@@ -189,6 +190,69 @@
       <button>OFFERTE<br>AANVRAGEN</button>
   </div>
     </div>
+    <div class="colorfooter">
+      <footer class="container-fluid footer">
+         <div class="row row-padding-50">
+            <div class="col-12 col-md-12 col-xl-3">
+               <img src="../img/Logo de vernada man-modified.png" alt="logo">
+               <h5>
+                  Bent u op zoek naar een maatwerk
+                  oplossing voor uw idee of project? Dan
+                  bent u bij de verandaman aan het juiste
+                  adres.
+               </h5>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 padding-top-5">
+               <h3>Diensten</h3>
+               <br>
+               <h5>TUINHUIZEN</h5>
+               <br>
+               <h5>VERANDA'S</h5>
+               <br>
+               <h5>OVERKAPPINGEN</h5>
+               <br>
+               <h5>
+               SCHUTTINGEN</h4><br>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 padding-top-5">
+               <h3>Laatste nieuws</h3>
+               <br>
+               <h5 class="footer-blog">01-juni-2022</h5>
+               <h5>
+                  //Titel blog,
+               </h5>
+               <h5>
+                  blog titel blog
+               </h5>
+               <br>
+               <h5 class="footer-blog">01-juni-2022</h5>
+               <h5>
+                  //Titel blog,
+               </h5>
+               <h5>
+                  blog titel blog
+               </h5>
+               <br>
+            </div>
+            <div class="col-12 col-md-4 col-xl-3 padding-top-5" style="margin-bottom: 5em;">
+               <h3>Contact</h3>
+               <br>
+               <div class="contacticon">                
+                <h5><i class="bi bi-geo-alt-fill" style="color: var(--icon-color);"></i>Kastanjepad 12, 6604 BK Wijchen</h5> 
+                <h5><i class="bi bi-telephone-fill" style="color: var(--icon-color);"></i> 06-57711630</h5>
+                <h5><i class="bi bi-envelope-fill" style="color: var(--icon-color);"></i> info@verandaman.com</h5>
+                <h5><i class="bi bi-facebook" style="color: var(--icon-color);"></i> De Verandaman</h5>
+                <h5><i class="bi bi-instagram" style="color: var(--icon-color);"></i> De Verandaman</h5>
+              </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-12 margin-bottom-5em">
+               <h6>© 2022 De Verandaman</h6>
+            </div>
+         </div>
+      </div>
+      </footer>
 </body>
 <script src="../Bootstrap\bootstrap-5.3.0-alpha3-dist\js\bootstrap.bundle.min.js"></script>
 </html>
