--- a/team.html
+++ b/team.html
@@ -7,6 +7,7 @@
     <link href="../Bootstrap\bootstrap-5.3.0-alpha3-dist\css\bootstrap.min.css" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link href="../style.css" rel="stylesheet">
+    <link rel="icon" type="images/x-icon" href="../img/Logo de vernada man.png"/>
     <title>TEAM</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../verandaman/index2.html">HOME</a>
+                    <a class="nav-link active" aria-current="page" href="../verandaman/home.html">HOME</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../verandaman/team.html">TEAM</a> 
@@ -63,9 +64,9 @@
           <div class="col-sm-12 headerimgh" style="height: 500px;">
                 <div class="image_wrapper">
             
-                    <div class="overlay overlay_2">
+                    <div class="overlay overlay_2 max-width-20">
                       <h3>Team</h3> 
-                      <p href="url" target="_self">HOME<a href="url" target="_self">TEAM</a></p>
+                      <p><a href="../verandaman/home.html" target="_self">HOME</a>TEAM</p>
                     </div>
                   </div>
               </div>
@@ -100,13 +101,13 @@
                 </div><br>
                 <div class="col-12 teamtext right">
                     <h2>Michael Jacobs</h2><br>
-                    <h3>Rechterhand en alleskunner</h3><br>
-                	<p>Deze vakman en timmerman in spe<br> helpt Jordy vanaf dag 1 al mee"<br> Zijn bus is altijd gewassen en netjes<br> van binnen en buiten<br> Alles heeft zijn eigen plek en<br> daar valt niks aan te muiten </p>
+                    <h3>Rechterhand<br> en alleskunner</h3><br>
+                	<p>"Deze vakman en timmerman in spe<br> helpt Jordy vanaf dag 1 al mee"<br> Zijn bus is altijd gewassen en netjes<br> van binnen en buiten<br> Alles heeft zijn eigen plek en<br> daar valt niks aan te muiten </p>
                 </div>
             </div>
         </div>
         <div class="row greenbutton">
-            <button>CONTACT<br>OPNEMEN</button>
+            <a href="../verandaman/contact.html"><button >CONTACT<br>OPNEMEN</button></a>
         </div>
     </div> 
         <div class="container-fluid second height: 95px">
@@ -127,7 +128,7 @@
                     </div>
                     <div class="row"> 
                         <div class="col-12 imglogo">
-                          <img src="../img/placeholder.png" alt="placeholder">
+                          <img class="chooseus" src="../img/SVG/Boormachine.svg" alt="placeholder">
                           <div class="content">
                             <h2>Meer dan 15 jaar evaring</h2>                
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus laudantium cupiditate dicta consequuntur reprehenderit doloremque odio. Obcaecati perspiciatis animi quibusdam, totam amet numquam ut accusantium culpa officia natus adipisci?</p>
@@ -136,7 +137,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 imglogo">
-                            <img src="../img/placeholder.png" alt="placeholder"> 
+                            <img class="chooseus" src="../img/SVG/Hout.svg" alt="placeholder"> 
                             <div class="content">
                             <h2>De beste materialen</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas nostrum officia sit rerum voluptatibus corrupti inventore doloribus aspernatur omnis pariatur beatae cum cupiditate, hic sed eius consectetur excepturi! Accusantium, libero.</p>          
@@ -145,7 +146,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 imglogo">
-                            <img src="../img/placeholder.png" alt="placeholder">
+                            <img class="chooseus" src="../img/SVG/1-2-3.svg" alt="placeholder">
                             <div class="content">
                             <h2>Professionele werkwijze</h2>              
                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus laudantium cupiditate dicta consequuntur reprehenderit doloremque odio. Obcaecati perspiciatis animi quibusdam, totam amet numquam ut accusantium culpa officia natus adipisci?</p>
@@ -157,61 +158,69 @@
         </div>
     </div>
 
-    <footer class="container-fluid footer beige">
-      <div class="row row-padding-50">
-        <div class="col-12 col-md-12 col-xl-3">
-          <img src="../img\fotor deverandaman.png" alt="logo">
-          <h5>
-            Bent u op zoek naar een maatwerk
-            oplossing voor uw idee of project? Dan
-            bent u bij de verandaman aan het juiste
-            adres.
-          </h5>
-        </div>
-        <div class="col-12 col-sm-6 col-md-4 col-xl-3 padding-top-5">
-          <h3>Diensten</h3><br>
-          <h5>TUINHUIZEN</h5><br>
-          <h5>VERANDA'S</h5><br>
-          <h5>OVERKAPPINGEN</h5><br>
-          <h5>SCHUTTINGEN</h4><br>
-        </div>
-        <div class="col-12 col-sm-6 col-md-4 col-xl-3 padding-top-5">
-          <h3>Laatste nieuws</h3><br>
-          <h5>01-juni-2022</h5>
-          <h5>
-            //Titel blog,
-
-          </h5>
-          <h5>
-            blog titel blog
-          </h5>
-          <br>
-          <h5>01-juni-2022</h5>
-          <h5>
-            //Titel blog,
-          </h5>
-          <h5>
-            blog titel blog
-          </h5><br>
-        </div>
-
-        <div class="col-12 col-md-4 col-xl-3 padding-top-5">
-          <h3>Contact</h3><br>
-          <h5><i class="fa-sharp fa-2xs fa-solid fa-location-dot" style="color: var(--icon-color);"></i>
-            Kastanjepad 12, 6604 BK Wijchen</h5>
-          <h5><i class="fa-solid fa-phone" style="color: var(--icon-color);"></i> 06-57711630</h5>
-          <h5><i class="fa-sharp fa-solid fa-envelope" style="color: var(--icon-color);"></i> info@verandaman.com
-          </h5>
-          <h5><i class="fa-brands fa-facebook" style="color: var(--icon-color);"></i> De Verandaman</h5>
-          <h5><i class="fa-brands fa-instagram" style="color: var(--icon-color);"></i> De Verandaman</h5>
-        </div>
+    <div class="colorfooter">
+      <footer class="container-fluid footer">
+         <div class="row row-padding-50">
+            <div class="col-12 col-md-12 col-xl-3">
+               <img src="../img/Logo de vernada man-modified.png" alt="logo">
+               <h5>
+                  Bent u op zoek naar een maatwerk
+                  oplossing voor uw idee of project? Dan
+                  bent u bij de verandaman aan het juiste
+                  adres.
+               </h5>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 padding-top-5">
+               <h3>Diensten</h3>
+               <br>
+               <h5>TUINHUIZEN</h5>
+               <br>
+               <h5>VERANDA'S</h5>
+               <br>
+               <h5>OVERKAPPINGEN</h5>
+               <br>
+               <h5>
+               SCHUTTINGEN</h4><br>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 padding-top-5">
+               <h3>Laatste nieuws</h3>
+               <br>
+               <h5 class="footer-blog">01-juni-2022</h5>
+               <h5>
+                  //Titel blog,
+               </h5>
+               <h5>
+                  blog titel blog
+               </h5>
+               <br>
+               <h5 class="footer-blog">01-juni-2022</h5>
+               <h5>
+                  //Titel blog,
+               </h5>
+               <h5>
+                  blog titel blog
+               </h5>
+               <br>
+            </div>
+            <div class="col-12 col-md-4 col-xl-3 padding-top-5" style="margin-bottom: 5em;">
+               <h3>Contact</h3>
+               <br>
+               <div class="contacticon">                
+                <h5><i class="bi bi-geo-alt-fill" style="color: var(--icon-color);"></i>Kastanjepad 12, 6604 BK Wijchen</h5> 
+                <h5><i class="bi bi-telephone-fill" style="color: var(--icon-color);"></i> 06-57711630</h5>
+                <h5><i class="bi bi-envelope-fill" style="color: var(--icon-color);"></i> info@verandaman.com</h5>
+                <h5><i class="bi bi-facebook" style="color: var(--icon-color);"></i> De Verandaman</h5>
+                <h5><i class="bi bi-instagram" style="color: var(--icon-color);"></i> De Verandaman</h5>
+              </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-12 margin-bottom-5em">
+               <h6>© 2022 De Verandaman</h6>
+            </div>
+         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <h6>© 2022 De Verandaman</h6>
-        </div>
-      </div>
-    </footer>
+      </footer>
 
 </body>
 <script src="../Bootstrap\bootstrap-5.3.0-alpha3-dist\js\bootstrap.bundle.min.js"></script>
