--- a/materialen.html
+++ b/materialen.html
@@ -7,6 +7,7 @@
     <link href="../Bootstrap\bootstrap-5.3.0-alpha3-dist\css\bootstrap.min.css" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link href="../style.css" rel="stylesheet">
+    <link rel="icon" type="images/x-icon" href="../img/Logo de vernada man.png"/>
     <title>materialen</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../verandaman/index2.html">HOME</a>
+                    <a class="nav-link active" aria-current="page" href="../verandaman/home.html">HOME</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../verandaman/team.html">TEAM</a> 
@@ -63,9 +64,9 @@
           <div class="col-sm-12 headerimgh" style="height: 500px;">
                 <div class="image_wrapper">
             
-                    <div class="overlay overlay_2">
+                    <div class="overlay overlay_2 max-width-25">
                       <h3>Materialen</h3> 
-                      <a href="url" target="_self"><span>HOME</span></a> <a href="url" target="_self">MATERIALEN</a>
+                      <p><a href="../verandaman/home.html" target="_self">HOME</a>MATERIALEN</p>
                     </div>
                   </div>
               </div>
@@ -88,11 +89,11 @@
       <div class="row margin-top">
         <p>
             <button type="button" class="btn btn-success" data-bs-toggle="collapse" data-bs-target="#collapse-b1" aria-expanded="false" aria-controls="collapse-b1">
-              Bouwhout1
+              Bouwhout
             </button>
           
             <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapse-b2" aria-expanded="false" aria-controls="collapse-b2">
-              Dakafwerking1
+              Dakafwerking
             </button>
           </div>
         </p>
@@ -343,7 +344,8 @@
     <h1>We werken met</h1>
     <div class="underline"></div>
     </div>
-    <div class="row">
+    <div class="col padding-0-35">
+    <div class="row imgworkingwithfirst">
       <div class="col pictureworkingwith">
         <img src="../img/placeholder.png" class="img-fluid workingwith" alt="placeholder">
       </div>
@@ -351,22 +353,87 @@
         <img src="../img/placeholder.png" class="img-fluid workingwith" alt="placeholder">
       </div>
       <div class="col pictureworkingwith">
-        <img src="../img/placeholder.png" class="img-fluid workingwith" alt="placeholder">
+        <img src="../img/placeholder.png" class="img-fluid workingwith right" alt="placeholder">
       </div>
     </div>
     <div class="row imgworkingwithsecond">
       <div class="col pictureworkingwith">
-        <img src="../img/placeholder.png" class="img-fluid workingwith" alt="placeholder">
+        <img src="../img/placeholder.png" class="img-fluid workingwith bottom" alt="placeholder">
       </div>
       <div class="col pictureworkingwith">
-        <img src="../img/placeholder.png" class="img-fluid workingwith" alt="placeholder">
+        <img src="../img/placeholder.png" class="img-fluid workingwith bottom" alt="placeholder">
       </div>
       <div class="col pictureworkingwith">
-        <img src="../img/placeholder.png" class="img-fluid workingwith" alt="placeholder">
+        <img src="../img/placeholder.png" class="img-fluid workingwith right bottom" alt="placeholder">
       </div>
+    </div>
     </div>
   </div>
 </div>
+</div>
+<div class="colorfooter">
+  <footer class="container-fluid footer">
+     <div class="row row-padding-50">
+        <div class="col-12 col-md-12 col-xl-3">
+           <img src="../img/Logo de vernada man-modified.png" alt="logo">
+           <h5>
+              Bent u op zoek naar een maatwerk
+              oplossing voor uw idee of project? Dan
+              bent u bij de verandaman aan het juiste
+              adres.
+           </h5>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 padding-top-5">
+           <h3>Diensten</h3>
+           <br>
+           <h5>TUINHUIZEN</h5>
+           <br>
+           <h5>VERANDA'S</h5>
+           <br>
+           <h5>OVERKAPPINGEN</h5>
+           <br>
+           <h5>
+           SCHUTTINGEN</h4><br>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 padding-top-5">
+           <h3>Laatste nieuws</h3>
+           <br>
+           <h5 class="footer-blog">01-juni-2022</h5>
+           <h5>
+              //Titel blog,
+           </h5>
+           <h5>
+              blog titel blog
+           </h5>
+           <br>
+           <h5 class="footer-blog">01-juni-2022</h5>
+           <h5>
+              //Titel blog,
+           </h5>
+           <h5>
+              blog titel blog
+           </h5>
+           <br>
+        </div>
+        <div class="col-12 col-md-4 col-xl-3 padding-top-5" style="margin-bottom: 5em;">
+           <h3>Contact</h3>
+           <br>
+           <div class="contacticon">                
+            <h5><i class="bi bi-geo-alt-fill" style="color: var(--icon-color);"></i>Kastanjepad 12, 6604 BK Wijchen</h5> 
+            <h5><i class="bi bi-telephone-fill" style="color: var(--icon-color);"></i> 06-57711630</h5>
+            <h5><i class="bi bi-envelope-fill" style="color: var(--icon-color);"></i> info@verandaman.com</h5>
+            <h5><i class="bi bi-facebook" style="color: var(--icon-color);"></i> De Verandaman</h5>
+            <h5><i class="bi bi-instagram" style="color: var(--icon-color);"></i> De Verandaman</h5>
+          </div>
+        </div>
+     </div>
+     <div class="row">
+        <div class="col-12 margin-bottom-5em">
+           <h6>© 2022 De Verandaman</h6>
+        </div>
+     </div>
+  </div>
+  </footer>
 </body>
 <script src="../Bootstrap\bootstrap-5.3.0-alpha3-dist\js\bootstrap.bundle.min.js">
 
